@@ -1,3 +1,8 @@
+1999-07-30  Richard Henderson  <rth@cygnus.com>
+
+	* typeck2.c (initializer_constant_valid_p): Moved to c-common.c.
+	* cp-tree.h (initializer_constant_valid_p): Remove.
+
 1999-07-28  Mark Mitchell  <mark@codesourcery.com>
 
 	* call.c (conditional_conversion): Don't build BASE_CONVs for
